fixed font readability on portfolio dialog

--- a/src/index.css
+++ b/src/index.css
@@ -249,6 +249,7 @@ All colors MUST be HSL.
 
     --muted: 32 25% 25%;
     --muted-foreground: 35 20% 65%;
+    --muted-foregound-portfolio: 60 23.3% 5.5%;
 
     --accent: 32 30% 63%;
     --accent-foreground: 30 6% 12%;
